fixe pbm affichage date et version mobile

--- a/front/src/app/@shared/components/auth/login/login.component.scss
+++ b/front/src/app/@shared/components/auth/login/login.component.scss
@@ -8,16 +8,15 @@ h1 {
   display: flex;
   justify-content: center;
   margin: 16px 64px;
-}
-
-.form-container > form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 32px 64px;
-  box-shadow: 0px 0px 1px 1px #4e516654;
-  border-radius: 32px;
-  width: 500px;
+  & form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 32px 64px;
+    box-shadow: 0px 0px 1px 1px #4e516654;
+    border-radius: 32px;
+    width: 500px;
+  }
 }
 
 .form-element {
@@ -62,4 +61,17 @@ h1 {
 
 .errorMsg {
   color: red;
+}
+
+@media (max-width: 580px) {
+  .form-container {
+    margin: 0;
+    width: 100%;
+    & form {
+      padding: 24px;
+      width: 100%;
+      border-radius: 0;
+      box-shadow: none;
+    }
+  }
 }
