--- a/front/src/app/posts/components/post-form/post-form.component.scss
+++ b/front/src/app/posts/components/post-form/post-form.component.scss
@@ -92,3 +92,16 @@ h1 {
     border-radius: 5px;
   }
 }
+
+@media (max-width: 580px) {
+  .form-container {
+    margin: 0;
+    width: 100%;
+    & form {
+      padding: 24px;
+      width: 100%;
+      border-radius: 0;
+      box-shadow: none;
+    }
+  }
+}
