--- a/front/src/app/posts/components/post-list/post-list.component.scss
+++ b/front/src/app/posts/components/post-list/post-list.component.scss
@@ -117,17 +117,23 @@ h2 {
 
 @media (max-width: 580px) {
   .post-container {
-    margin: 0;
-  }
-
-  .post-list {
-    align-items: stretch;
-    padding-bottom: 8px;
+    width: 100%;
   }
 
   .post-card {
-    width: 100%;
-    margin: 0;
-    border-radius: 0;
+    padding: 30px;
+    width: 90%;
+  }
+
+  h2 {
+    font-size: 1.3em;
+  }
+
+  .btn {
+    font-size: 20px;
+  }
+
+  .post-header > p {
+    display: none;
   }
 }
